schema/testdata/errors/set_attribute_backlink_repeated_fields.keel
model Record {
    fields {
        name Text
        owner User?
        parent Record?
        children Record[]
    }

    actions {
        create createRecordWithChildren() with (name, children.name) {
            //expect-error:42:73:AttributeExpressionError:expression expected to resolve to type User but it is User[]
            @set(record.children.owner = ctx.identity.user.records.owner)
        }
    }
}

model User {
    fields {
        identity Identity {
            @unique
            @relation(user)
        }
        records Record[]
    }
}
